# mapping-extensions

./: .gitignore  README.md
src/: pyproject.toml
src/mapext/: __init__.py  _dicts.py
src/mapext/descriptorregister/: __init__.py  _descriptorregister.py
test/: test_descriptors.py  test_frozendict.py  test_kvdecor.py
